--- a/HealthGraphNet.Samples/MonoTouch/HealthGraphNet.Samples.MonoTouch.csproj
+++ b/HealthGraphNet.Samples/MonoTouch/HealthGraphNet.Samples.MonoTouch.csproj
@@ -100,4 +100,7 @@
       <Name>HealthGraphNet.MonoTouch</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Default-568h%402x.png" />
+  </ItemGroup>
 </Project>
