--- a/HealthGraphNet.NET45/packages.config
+++ b/HealthGraphNet.NET45/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FubarCoder.RestSharp.Portable" version="3.1.0" targetFramework="net45" />
   <package id="FubarCoder.RestSharp.Portable.Core" version="3.1.0" targetFramework="net452" />
   <package id="FubarCoder.RestSharp.Portable.HttpClient" version="3.1.0" targetFramework="net452" />
   <package id="FubarCoder.RestSharp.Portable.OAuth" version="3.1.0" targetFramework="net452" />
