--- a/HealthGraphNet.Tests/app.config
+++ b/HealthGraphNet.Tests/app.config
@@ -12,4 +12,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="AccessToken" value=""/>
+  </appSettings>
 </configuration>
