--- a/HealthGraphNet.Tests/HealthGraphNet.Tests.csproj
+++ b/HealthGraphNet.Tests/HealthGraphNet.Tests.csproj
@@ -67,6 +67,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -96,13 +97,13 @@
     <Compile Include="Unit\Endpoints\FitnessActivitiesEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\GeneralMeasurementsEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\NutritionEndpointTest.cs" />
-    <Compile Include="Unit\Endpoints\ProfileEndpointTest.cs" />
+    <None Include="Unit\Endpoints\ProfileEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\SettingsEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\SleepEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\StreetTeamEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\StrengthTrainingActivitiesEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\WeightEndpointTest.cs" />
-    <Compile Include="Unit\RestSharp\OAuth2RequestHeaderAuthenticatorTest.cs" />
+    <None Include="Unit\RestSharp\OAuth2RequestHeaderAuthenticatorTest.cs" />
     <Compile Include="Unit\RestSharp\ValidateHelperTest.cs" />
   </ItemGroup>
   <ItemGroup>
