--- a/HealthGraphNet.Tests/packages.config
+++ b/HealthGraphNet.Tests/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FubarCoder.RestSharp.Portable" version="3.3.0" targetFramework="net45" />
-  <package id="FubarCoder.RestSharp.Portable.Core" version="3.3.0" targetFramework="net45" />
-  <package id="FubarCoder.RestSharp.Portable.HttpClient" version="3.3.0" targetFramework="net45" />
-  <package id="FubarCoder.RestSharp.Portable.OAuth" version="3.3.0" targetFramework="net45" />
-  <package id="FubarCoder.RestSharp.Portable.OAuth2" version="3.3.0" targetFramework="net45" />
-  <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
-  <package id="NUnit" version="3.2.1" targetFramework="net45" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
+  <package id="FubarCoder.RestSharp.Portable.Core" version="4.0.7" targetFramework="net45" />
+  <package id="FubarCoder.RestSharp.Portable.HttpClient" version="4.0.7" targetFramework="net45" />
+  <package id="FubarCoder.RestSharp.Portable.OAuth1" version="4.0.7" targetFramework="net45" />
+  <package id="FubarCoder.RestSharp.Portable.OAuth2" version="4.0.7" targetFramework="net45" />
+  <package id="Moq" version="4.5.30" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="NUnit" version="3.6.0" targetFramework="net45" />
 </packages>
