--- a/HealthGraphNet.iOS/HealthGraphNet.iOS.csproj
+++ b/HealthGraphNet.iOS/HealthGraphNet.iOS.csproj
@@ -69,6 +69,6 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <Import Project="..\HealthGraphNet\HealthGraphNet_.projitems" Label="Shared" />
+  <Import Project="..\HealthGraphNet\HealthGraphNet.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
