--- a/HealthGraphNet.NET45/HealthGraphNet.NET45.csproj
+++ b/HealthGraphNet.NET45/HealthGraphNet.NET45.csproj
@@ -68,7 +68,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <Import Project="..\HealthGraphNet\HealthGraphNet_.projitems" Label="Shared" />
+  <Import Project="..\HealthGraphNet\HealthGraphNet.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
