--- a/HealthGraphNet.Tests/HealthGraphNet.Tests.csproj
+++ b/HealthGraphNet.Tests/HealthGraphNet.Tests.csproj
@@ -95,12 +95,14 @@
     <Compile Include="Integration\Endpoints\ProfileEndpointTest.cs" />
     <Compile Include="Integration\Endpoints\UsersEndpointTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resource.cs" />
     <Compile Include="Unit\ClientStub.cs" />
     <Compile Include="Unit\Endpoints\BackgroundActivitiesEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\DiabetesMeasurementsEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\FitnessActivitiesEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\GeneralMeasurementsEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\NutritionEndpointTest.cs" />
+    <EmbeddedResource Include="Resources\userinfo.json" />
     <None Include="Unit\Endpoints\ProfileEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\SettingsEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\SleepEndpointTest.cs" />
@@ -108,6 +110,7 @@
     <Compile Include="Unit\Endpoints\StrengthTrainingActivitiesEndpointTest.cs" />
     <Compile Include="Unit\Endpoints\WeightEndpointTest.cs" />
     <None Include="Unit\RestSharp\OAuth2RequestHeaderAuthenticatorTest.cs" />
+    <Compile Include="Unit\OAuth2ClientTest.cs" />
     <Compile Include="Unit\RestSharp\ValidateHelperTest.cs" />
   </ItemGroup>
   <ItemGroup>
